#
# Makefile for crossfire client
#
#   Copyright (C) 2005 Mark Wedel & Crossfire Development Team
#
#   This program is free software; you can redistribute it and/or modify
#   it under the terms of the GNU General Public License as published by
#   the Free Software Foundation; either version 2 of the License, or
#   (at your option) any later version.
#
#   This program is distributed in the hope that it will be useful,
#   but WITHOUT ANY WARRANTY; without even the implied warranty of
#   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#   GNU General Public License for more details.
#
#   You should have received a copy of the GNU General Public License
#   along with this program; if not, write to the Free Software
#   Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
#
#   The author can be reached via e-mail to crossfire-devel@real-time.com

noinst_HEADERS = \
	16x16.png	\
	32x32.png	\
	48x48.png	\
	all.xpm		\
	applied.xbm	\
	applied.xpm	\
	bg.xpm		\
	clear.xbm	\
	close.xbm	\
	close.xpm	\
	coin.xpm	\
	crossfiretitle.xpm	\
	cursed.xbm	\
	cursed.xpm	\
	damned.xbm	\
	damned.xpm	\
	dot.xpm		\
	hand.xpm	\
	hand2.xpm	\
	lock.xpm	\
	locked.xbm	\
	locked.xpm	\
	mag.xpm		\
	magic.xbm	\
	magic.xpm	\
	nonmag.xpm	\
	question.111	\
	question.sdl	\
	question.xpm	\
	sign_east.xpm   \
	sign_flat.xpm   \
	sign_west.xpm   \
	skull.xpm	\
	stipple.111	\
	stipple.112	\
	test.xpm	\
	unlock.xpm	\
	unpaid.xbm	\
	unpaid.xpm	

