XML_FILES = \
	caelestis.glade \
	chthonic.glade \
	dialogs.glade \
	eureka.glade \
	gtk-v1.glade \
	gtk-v2.glade \
	lobotomy.glade \
	meflin.glade \
	oroboros.glade \
	sixforty.glade \
	un-deux.glade \
	v1-redux.glade

PRJ_FILES = $(XML_FILES:.glade=.gladep)

gladedir=$(pkgdatadir)/ui

glade_DATA = $(XML_FILES)

EXTRA_DIST = \
	$(XML_FILES) \
	$(PRJ_FILES) \
	README
